# waveSimulation

./: .gitignore  README.md
work/: CMakeLists.txt  README.txt
work/ext/imgui/: CMakeLists.txt
work/ext/stb/: stb.c
work/res/: CMakeLists.txt
work/res/assets/: ground4.mtl
work/res/shaders/: caustic.vert  norm.frag  plain.frag  plain.vert  shaderCaustics.vert  shaderDemo.frag  shaderDemo.vert  shaderGerstner.vert  shaderPhong.frag  shaderSimple.vert  ship.vert  sobel.frag  sobel.vert  toon.frag  toon.vert
work/src/: CMakeLists.txt  boid.cpp  boid.hpp  caustic.vert  geometry.cpp  geometry.hpp  helpers.hpp  main.cpp  octree.hpp  octree_node.hpp  perlin_noise.cpp  school.cpp  school.hpp  shady_geometry.hpp  simple_gui.cpp  simple_shader.hpp  wave.cpp  wave.hpp
